oasis-macros/tests/ui/no_service_derive.stderr
error: Service definition must contain a #[derive(Service)] struct.
 --> $DIR/no_service_derive.rs:2:1
  |
2 | #[oasis_std::service]
  | ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

